Commit Layout Pronto

--- a/SolucaoApiCorreios/AplicacaoWebCorreios/AplicacaoWebCorreios.csproj
+++ b/SolucaoApiCorreios/AplicacaoWebCorreios/AplicacaoWebCorreios.csproj
@@ -181,7 +181,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51136</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44397/</IISUrl>
+          <IISUrl>http://localhost:51136/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
